--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"categories": [
 		"Other"
 	],
-	"icon": "images/icon.png",
+	"icon": "public/images/icon.png",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/chogath/nestjs-tool"
