--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "nest-server-tools",
 	"displayName": "Nest-Server-Tools",
 	"publisher": "chogath",
-	"description": "🦁 nest-server 的 vscode 插件",
-	"version": "0.0.1",
+	"description": "🦁 帮助 nest-server 开发者在 vscode 中快速创建模板/目录/文件",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
