--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
 	},
 	"activationEvents": [
 		"onCommand:extension.BO",
-		"onCommand:extension.DTO",
 		"onCommand:extension.Controller",
+		"onCommand:extension.Common",
+		"onCommand:extension.DTO",
+		"onCommand:extension.Decorator",
 		"onCommand:extension.Extends",
 		"onCommand:extension.Filter",
 		"onCommand:extension.Guard",
 		"onCommand:extension.Interceptor",
 		"onCommand:extension.Module.File",
+		"onCommand:extension.Shared",
 		"onCommand:extension.Sequelize.File",
 		"onCommand:extension.Modules",
 		"onCommand:extension.Pipe",
@@ -57,12 +60,24 @@
 				"title": "📄 Nest-S: sequelize"
 			},
 			{
+				"command": "extension.Shared",
+				"title": "📁 Nest-S: shared"
+			},
+			{
+				"command": "extension.Common",
+				"title": "📁 Nest-S: common"
+			},
+			{
 				"command": "extension.BO",
 				"title": "📦 Nest-S: BO"
 			},
 			{
 				"command": "extension.DTO",
 				"title": "📦 Nest-S: DTO"
+			},
+			{
+				"command": "extension.Decorator",
+				"title": "📦 Nest-S: Decorator"
 			},
 			{
 				"command": "extension.Controller",
@@ -107,57 +122,97 @@
 				},
 				{
 					"command": "extension.BO",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.DTO",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != bo && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.Controller",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != bo && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.Service",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != bo && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.Filter",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != bo && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.Interceptor",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != bo && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.Pipe",
-					"when": "explorerResourceIsFolder",
-					"group": "9_cutcopypaste"
-				},
-				{
-					"command": "extension.Provider",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != bo && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
 					"command": "extension.Guard",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != bo && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
 					"group": "9_cutcopypaste"
 				},
 				{
+					"command": "extension.Provider",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != bo && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
+					"group": "9_cutcopypaste"
+				},
+				{
+					"command": "extension.Provider",
+					"when": "explorerResourceIsFolder && resourceFilename != extends && resourcePath =~ /extends/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != bo && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
+					"group": "9_cutcopypaste"
+				},
+				{
+					"command": "extension.Decorator",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != bo && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
+					"group": "9_cutcopypaste"
+				},
+				{
+					"command": "extension.Decorator",
+					"when": "explorerResourceIsFolder && resourceFilename != extends && resourcePath =~ /extends/ && resourceFilename != controller && resourceFilename != bo && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != common",
+					"group": "9_cutcopypaste"
+				},
+				{
+					"command": "extension.Shared",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != bo && resourceFilename != common && resourceFilename != shared",
+					"group": "7_modification"
+				},
+				{
+					"command": "extension.Shared",
+					"when": "explorerResourceIsFolder && resourceFilename != extends && resourcePath =~ /extends/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != bo && resourceFilename != common && resourceFilename != shared",
+					"group": "7_modification"
+				},
+				{
+					"command": "extension.Common",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != bo && resourceFilename != common",
+					"group": "7_modification"
+				},
+				{
+					"command": "extension.Common",
+					"when": "explorerResourceIsFolder && resourceFilename != extends && resourcePath =~ /extends/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != bo && resourceFilename != common",
+					"group": "7_modification"
+				},
+				{
 					"command": "extension.Module.File",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourceFilename != modules && resourcePath =~ /modules/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != bo && resourceFilename != common",
+					"group": "7_modification"
+				},
+				{
+					"command": "extension.Module.File",
+					"when": "explorerResourceIsFolder && resourceFilename != extends && resourcePath =~ /extends/ && resourceFilename != controller && resourceFilename != decorator && resourceFilename != dto && resourceFilename != filter && resourceFilename != guard && resourceFilename != interceptor && resourceFilename != pipe && resourceFilename != provider && resourceFilename != service && resourceFilename != shared && resourceFilename != bo && resourceFilename != common",
 					"group": "7_modification"
 				},
 				{
 					"command": "extension.Sequelize.File",
-					"when": "explorerResourceIsFolder",
+					"when": "explorerResourceIsFolder && resourcePath =~ /extends/ && resourcePath =~ /shared/",
 					"group": "7_modification"
 				}
 			]
