fix: 😂 display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nest-server-tools",
-	"displayName": "Nesterver-Tools",
+	"displayName": "Nest-Server-Tools",
 	"publisher": "chogath",
 	"description": "🦁 帮助 nest-server 开发者在 vscode 中快速创建模板/目录/文件",
 	"version": "0.1.6",
