--- a/.github/workflows/publish-vscode.yml
+++ b/.github/workflows/publish-vscode.yml
@@ -27,4 +27,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g vsce
     - run: npm install
-    - run: vsce publish --p $VSCODE_TOKEN
+    - run: vsce publish -p $VSCODE_TOKEN
